Fix crash when cleaning up PeerConnectors

BUG: 245796

svn path=/trunk/extragear/network/libktorrent/; revision=1155405