src/peer/peerconnector.cpp
@@ -64,6 +64,20 @@ namespace bt
 				start(TCP_WITHOUT_ENCRYPTION);
 		}
 	}
+	
+	void PeerConnector::stop()
+	{
+		if (auth)
+		{
+			// Add all methods to the tried_methods set, so the authentication will stop
+			tried_methods.insert(UTP_WITH_ENCRYPTION);
+			tried_methods.insert(TCP_WITH_ENCRYPTION);
+			tried_methods.insert(UTP_WITHOUT_ENCRYPTION);
+			tried_methods.insert(TCP_WITHOUT_ENCRYPTION);
+			auth->stop();
+		}
+	}
+
 
 
 	void PeerConnector::authenticationFinished(Authenticate* auth, bool ok)
@@ -118,7 +132,6 @@ namespace bt
 		if (local)
 			auth->setLocal(true);
 		
-		connect(pman,SIGNAL(stopped()),auth,SLOT(stop()));
 		AuthenticationMonitor::instance().add(auth);
 	}
 
