src/peer/peermanager.cpp
@@ -80,6 +80,8 @@ namespace bt
 		peer_list.clear();
 		
 		delete superseeder;
+		
+		qDeleteAll(connectors);
 	}
 
 	void PeerManager::pause()
@@ -559,10 +561,11 @@ namespace bt
 		available_chunks.clear();
 		started = false;
 		ServerInterface::removePeerManager(this);
-		foreach (PeerConnector* pcon,connectors)
-			delete pcon;
-		connectors.clear();
-		stopped();
+		// Use copy so that connectors can be safely emptied
+		QSet<PeerConnector*> connectors_copy = connectors;
+		foreach (PeerConnector* pcon,connectors_copy)
+			pcon->stop();
+		
 		num_pending = 0;
 		if (superseeder)
 		{
