src/peer/peermanager.h
@@ -295,7 +295,6 @@ namespace bt
 	signals:
 		void newPeer(Peer* p);
 		void peerKilled(Peer* p);
-		void stopped();
 		
 	private:
 		PtrMap<Uint32,Peer> peer_map;
